Overflow issues on IE11 fixed

--- a/apps/wizdm/src/app/navigator/navigator.component.scss
+++ b/apps/wizdm/src/app/navigator/navigator.component.scss
@@ -6,7 +6,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  //bottom: 0;// Fit the navigator to the available height
 
   // Same as fxLayout="column" on the host element
   display: flex;
@@ -16,6 +15,7 @@
 
 .container {
   position: relative;
+  overflow: hidden;
   z-index: $wm-zindex-content;
 }
 
